Update results to use CardView.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
 }
 
 dependencies {
+
+    String supportVersion = '27.1.1'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -31,7 +34,16 @@ dependencies {
 
     implementation 'org.tensorflow:tensorflow-android:1.9.0'
 
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation "com.android.support:support-compat:$supportVersion"
+    implementation "com.android.support:support-core-utils:$supportVersion"
+    implementation "com.android.support:support-core-ui:$supportVersion"
+    implementation "com.android.support:support-fragment:$supportVersion"
+    implementation "com.android.support:cardview-v7:$supportVersion"
+    implementation "com.android.support:design:$supportVersion"
+    implementation "com.android.support:recyclerview-v7:$supportVersion"
+    implementation "com.android.support:palette-v7:$supportVersion"
+    implementation "com.android.support:preference-v14:$supportVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
     testImplementation 'junit:junit:4.12'
 }
