--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     })
 
     implementation 'org.tensorflow:tensorflow-android:1.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
 
     implementation "com.android.support:support-compat:$supportVersion"
     implementation "com.android.support:support-core-utils:$supportVersion"
