--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         applicationId "com.dmitrybrant.mushroomhunter"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 3
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -25,6 +25,7 @@ android {
     sourceSets.main {
         jniLibs.srcDir 'src/main/libs'
     }
+    namespace 'com.dmitrybrant.mushroomhunter'
 }
 
 dependencies {
@@ -34,8 +35,8 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-android:1.13.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
-    implementation "com.google.android.material:material:1.5.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation "com.google.android.material:material:1.6.0"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
