--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdk 35
+    compileSdk = 35
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_17
@@ -9,12 +9,12 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.dmitrybrant.mushroomhunter"
-        minSdk 21
-        targetSdk 35
-        versionCode 3
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        applicationId = "com.dmitrybrant.mushroomhunter"
+        minSdk = 21
+        targetSdk = 35
+        versionCode = 3
+        versionName = "1.0"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
